; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_idct_msa.c_ff_idct_idct_8x8_add_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_idct_msa.c_ff_idct_idct_8x8_add_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_idct_idct_8x8_add_msa(i32* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %11, label %16

11:                                               ; preds = %4
  %12 = load i32*, i32** %7, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @vp9_idct8x8_1_add_msa(i32* %12, i32* %13, i32 %14)
  br label %30

16:                                               ; preds = %4
  %17 = load i32, i32* %8, align 4
  %18 = icmp sle i32 %17, 12
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @vp9_idct8x8_12_colcol_addblk_msa(i32* %20, i32* %21, i32 %22)
  br label %29

24:                                               ; preds = %16
  %25 = load i32*, i32** %7, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @vp9_idct8x8_colcol_addblk_msa(i32* %25, i32* %26, i32 %27)
  br label %29

29:                                               ; preds = %24, %19
  br label %30

30:                                               ; preds = %29, %11
  ret void
}

declare dso_local i32 @vp9_idct8x8_1_add_msa(i32*, i32*, i32) #1

declare dso_local i32 @vp9_idct8x8_12_colcol_addblk_msa(i32*, i32*, i32) #1

declare dso_local i32 @vp9_idct8x8_colcol_addblk_msa(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
